# smart-home-helper

./: audio.py  audiorecord.py  chatgpt.py  log.py  main.py  processor.py  pyproject.toml
